added mod rewrite to conf to remove www and redirect from .com to .co.uk
also added favicon.ico

--- a/conf/http.conf
+++ b/conf/http.conf
@@ -1,5 +1,30 @@
 KeepAlive Off
 
+<Macro Rewrite>
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteLog "/var/log/apache2/rewrite.log"
+RewriteLogLevel 0
+
+RewriteCond %{HTTP_HOST} ^www.xerobis.co.uk$ [NC]
+RewriteCond %{HTTP_HOST} !^$
+RewriteRule ^/(.*) http://xerobis.co.uk/$1 [R=301,L]
+
+RewriteCond %{HTTP_HOST} ^(www.)?xerobis.com$ [NC]
+RewriteCond %{HTTP_HOST} !^$
+RewriteRule ^/(.*) http://xerobis.co.uk/$1 [R=301,L]
+
+</IfModule>
+</Macro>
+
+<Macro Static $url>
+		<Location "$url">
+			SetHandler None
+			Order allow,deny
+			Allow from all
+		</Location>
+</Macro>
+
 # macro where aupa installed to
 <Macro InstallDir $dir>
 	<VirtualHost *:80>
@@ -9,6 +34,8 @@ KeepAlive Off
 		CustomLog /var/log/apache2/access.log combined
 		ErrorLog /var/log/apache2/error.log
 		LogLevel warn
+		
+		Use Rewrite
 	
 		<Location "/">
 			SetHandler python-program
@@ -23,20 +50,13 @@ KeepAlive Off
 		</Location>
 		
 		Alias /static $dir/static
-		
-		<Location "/static">
-			SetHandler None
-			Order allow,deny
-			Allow from all
-		</Location>
-		
+		Use Static /static
+				
 		Alias /media $dir/lib/django/contrib/admin/media
+		Use Static /media
 		
-		<Location "/media">
-			SetHandler None
-			Order allow,deny
-			Allow from all
-		</Location>
+		Alias /favicon.ico $dir/static/favicon.ico
+		Use Static /favicon.ico
 	
 	</VirtualHost>
 	
@@ -46,6 +66,8 @@ KeepAlive Off
 		customLog /var/log/apache2/ssl_access.log combined
 		ErrorLog /var/log/apache2/error.log
 		LogLevel warn
+		
+		Use Rewrite
 	
 		<Location "/">
 			SetHandler python-program
@@ -60,20 +82,13 @@ KeepAlive Off
 		</Location>
 		
 		Alias /static $dir/static
-		
-		<Location "/static">
-			SetHandler None
-			Order allow,deny
-			Allow from all
-		</Location>
-		
+		Use Static /static
+				
 		Alias /media $dir/lib/django/contrib/admin/media
+		Use Static /media
 		
-		<Location "/media">
-			SetHandler None
-			Order allow,deny
-			Allow from all
-		</Location>
+		Alias /favicon.ico $dir/static/favicon.ico
+		Use Static /favicon.ico
 		
 		SSLEngine on
 		SSLCertificateFile		$dir/ssl/xerobis.co.uk.crt
